--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -129,7 +129,6 @@ body {
 }
 
 .excel-website-container a span{
-    opacity: 0;
     width: 200px;
     font-weight: 600;
     letter-spacing: 0.05em;
@@ -137,10 +136,8 @@ body {
     position: absolute;
     left: 100%;
     font-family: 'Josefin Sans';
-    color: #4d668c;
-}
-.excel-website-container a:hover span{
-    opacity: 1;
+    color: white;
+    text-shadow: 0px 0px 4px black;
 }
 
 .find-out span {
